Fixed grid-gap to prevent it from growing when the viewport is wider

--- a/css/index.css
+++ b/css/index.css
@@ -231,7 +231,8 @@ body > [type="checkbox"]:checked ~ header .menu {
   grid-gap: 9px;
   padding-top: calc(82px - 32px);
   padding-bottom: calc(92px - 32px);
-  overflow: auto; }
+  overflow: auto;
+  grid-auto-columns: min-content; }
 
 .active-picture {
   grid-column: 1/9; }
@@ -286,7 +287,7 @@ body > [type="checkbox"]:checked ~ header .menu {
 .summary_article-header-paragraph,
 .summary_article-paragraph,
 .details_content-breadcrumb,
-figure {
+.details_content-figure {
   margin: 0; }
 
 @media (min-width: 640px) {
